sna: Drop false IGNORE_DAMAGE hint

IGNORE_DAMAGE is used by sna_drawable_use_bo to ignore both CPU/GPU
damage. It used to only ignore CPU damage, but now is a more general
hint. However, here we were intending to only say ignore the cpu damage
that we explicitly discarded anyway.

References: https://bugs.freedesktop.org/show_bug.cgi?id=81973
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>